# python-project-50

./: .flake8  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: my_workflow.yml
gendiff/: parser.py
gendiff/formatters/: format_identifier.py  plain.py
gendiff/scripts/: gendiff.py  generate_diff.py
tests/: test_gendiff.py
