[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
    dev-dependencies = [
        "pytest",
        "PyYAML >=6.0"
        "pytest-cov",
        "flake8"
    ]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[tool.hatch.envs.default.scripts]
test = "pytest --cov-report term --cov hexlet_code"
lint = "flake8 gendiff"


